Fix text alignment in recipe CSS

--- a/pbandj recipe.css
+++ b/pbandj recipe.css
@@ -7,5 +7,5 @@ body{
     border: 1px solid black;
     padding: 10px;
     margin: 10px;
-    text-align: c;
+    text-align: center;
 }
